fixing th width for th skill cards that causd thm to spill out th container

--- a/src/Components/Skills.css
+++ b/src/Components/Skills.css
@@ -13,7 +13,7 @@
     border-radius: 1rem;
     border: 2px solid white;
     box-shadow: 0 5px 10px black;
-    width: 375px;
+    width: 300px;
 }
 
 .skills-grid {
